@@ -1,5 +1,12 @@
 2003-09-11  John Levon  <levon@movementarian.org>
 
+	* dae/oprofiled.c:
+	* daemon/oprofiled.c:
+	* libdb/db_manage.c:
+	* libdb/db_test.c: correct headers
+
+2003-09-11  John Levon  <levon@movementarian.org>
+
 	* op_lockfile.c: use correct headers
 
 2003-09-07  Philippe Elie  <phil.el@wanadoo.fr>
